v3-dev (20191127)
* Spun off separate pickword() function in preparation for new possibilities
* Added potion support
* Added generation of fake dark web domains (incl .onion and urban legend TLDs)

v2.1 stable (20191126)
Summary of changes since v1:
* Added "safe space mode" which avoids posting politically incorrect content
* Added option to post version in unlisted mode
* Added "nationalities" list (nationalities, ethnicities, races)
* Added "occupations" list (based on the studies list)
* Added more content to the lists

v2-dev (20191119)
* Added "nationalities" list (nationalities, ethnicities, races)
* Added more to conspiracy and medieval

v2-dev (20191117)
* Typo fixed in README.md

v2-dev (20191116)
* Added "occupations" list (based on the studies list)
* Added some more phrases to conspiracy, medieval, politics, and studies 

v2-dev (20191115)
* Created -c/--postpcphrase option (aka "safe space mode")
* Made some more changes to functions to make this possible

v2-dev (20191114)
* Added "Thanks" section to README.md
* Added CHANGES file
* In preparation for --postversion option, created string-returning functions verline() and verpart2() which are incorporated into the existing optversion() and optlicense().
* Created -w/--postversion option (posts contents of -v unlisted)

v1 (20191113)
* Initial release